ch4 toc and tidying header levels - some start on chapter 6

--- a/_posts/thesis_chapters/2024-3-4-Design.md
+++ b/_posts/thesis_chapters/2024-3-4-Design.md
@@ -8,9 +8,11 @@ layout: post
 categories: chapter
 title: 4. Exploration of the Formative Learning Design Process
 ---
+
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
+    -   [Research Questions - April
+        2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
     -   [Detailed description of dimensions of game making
@@ -32,58 +34,65 @@ title: 4. Exploration of the Formative Learning Design Process
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
     -   [Conflicts and design tensions experienced by participants and
         facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-        -   [Tensions due to lack of access and familiarity to game
-            programming
-            tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
-            -   [Design choices of the starter game
-                template](#design-choices-of-the-starter-game-template)
-            -   [Observations on the game template and core
-                tools](#observations-on-the-game-template-and-core-tools)
+    -   [Tensions due to lack of access and familiarity to game
+        programming
+        tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+        -   [Design choices of the starter game
+            template](#design-choices-of-the-starter-game-template)
+            -   [Structural design of the game
+                template](#structural-design-of-the-game-template)
+            -   [Variable editing for player
+                movement](#variable-editing-for-player-movement)
+            -   [Level design and
+                prototyping](#level-design-and-prototyping)
+            -   [Background colour and a pixel
+                art](#background-colour-and-a-pixel-art)
+        -   [Observations on the game template and core
+            tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
             playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
-            -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-            -   [Remixing and showcasing
-                projects](#remixing-and-showcasing-projects)
-        -   [Participant conflict associated with project navigation and
-            use of
-            documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-            -   [Quick Start Cards](#quick-start-cards)
-            -   [Code snippet examples](#code-snippet-examples)
-            -   [Structuring instructional tutorial
-                chapters](#structuring-instructional-tutorial-chapters)
-            -   [Theming the a collection of game design patterns to aid
-                navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Distributed vs. self-contained approaches to asset
+            creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+        -   [Remixing and showcasing
+            projects](#remixing-and-showcasing-projects)
+    -   [Participant conflict associated with project navigation and use
+        of
+        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        -   [Quick Start Cards](#quick-start-cards)
+        -   [Code snippet examples](#code-snippet-examples)
+        -   [Structuring instructional tutorial
+            chapters](#structuring-instructional-tutorial-chapters)
+        -   [Theming the a collection of game design patterns to aid
+            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+    -   [Responding to tensions and barriers in cultural aspects of the
+        game making
+        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
             -   [Barriers of identity, coding & dysfunctional group
-                work](#barriers-of-identity-coding-dysfunctional-group-work)
-    -   [Exploring the impact of a drama
-        processes](#exploring-the-impact-of-a-drama-processes)
-        -   [Vignette 4.1.a - Introducing a drama
-            process](#vignette-4.1.a---introducing-a-drama-process)
-        -   [Description of Vignette
-            4.1.a](#description-of-vignette-4.1.a)
-        -   [Vignette 4.1.b - Session reflections and secret
-            missions](#vignette-4.1.b---session-reflections-and-secret-missions)
-        -   [Description of Vignette
-            4.1.b](#description-of-vignette-4.1.b)
-        -   [Relevant observations on side missions and drama from the
-            data](#relevant-observations-on-side-missions-and-drama-from-the-data)
-        -   [Reflecting in role](#reflecting-in-role)
-        -   [Observations on written interactions with the alien in the
-            drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
-            -   [Exploring documentation and accessing technical help
-                within the drama
-                frame](#exploring-documentation-and-accessing-technical-help-within-the-drama-frame)
-            -   [Playful dialogue with the aliens unrelated to game
-                making](#playful-dialogue-with-the-aliens-unrelated-to-game-making)
-        -   [Concluding remarks on process
-            drama](#concluding-remarks-on-process-drama)
-    -   [Results on key interventions of the design concerning
-        agency](#results-on-key-interventions-of-the-design-concerning-agency)
+                work - FROM ANOTHER
+                CHAPTER](#barriers-of-identity-coding-dysfunctional-group-work---from-another-chapter)
+        -   [Exploring the impact of a drama
+            processes](#exploring-the-impact-of-a-drama-processes)
+            -   [Vignette 4.1.a - Introducing a drama
+                process](#vignette-4.1.a---introducing-a-drama-process)
+            -   [Description of Vignette
+                4.1.a](#description-of-vignette-4.1.a)
+            -   [Vignette 4.1.b - Session reflections and secret
+                missions](#vignette-4.1.b---session-reflections-and-secret-missions)
+            -   [Description of Vignette
+                4.1.b](#description-of-vignette-4.1.b)
+            -   [Relevant observations on side missions and drama from
+                the
+                data](#relevant-observations-on-side-missions-and-drama-from-the-data)
+            -   [Reflecting in role](#reflecting-in-role)
+            -   [Observations on written interactions with the alien in
+                the
+                drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
+            -   [Concluding remarks on process
+                drama](#concluding-remarks-on-process-drama)
         -   [Using Physical Maps of Missions as Game Design
             Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
         -   [A game encouraging maker / player
@@ -98,12 +107,13 @@ title: 4. Exploration of the Formative Learning Design Process
 
 # Exploration of the Formative Learning Design Process
 
-## Research Questions - Feb 2024
+## Research Questions - April 2024
 
 ~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
-1. What ~barriers~ contradictions in participation in game coding processes emerged in the research processes and what were the resulting responses?
-2. How can learners build agency in an evolving community of game makers?
-3. How can game design patterns support the development of coding practices with novices?
+1. What ~barriers~ contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
+2. How can game design patterns support the development of coding practices with novices?
+3. How can learners build agency in an evolving community of game makers?
+
 
 ## A note on style
 
@@ -146,9 +156,16 @@ In line with key techniques of third generation activity theory (3GAT), this cha
 
 Firstly, I describe activity systems at different scopes, focusing on the objective of participants.
 
-Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three conflicts in interrelated activity systems.
+Following this, I explore emerging tensions in design in a way which communicates relevant context through the analysis of three areas of emerging contradictions in activity. Here the term contradictions is used as a wrapper for more specific tensions, barriers, breakdowns, conflicts that indicate an "unfit with (system) elements [@kuutti_activity_1995]. Three main areas of contradictions are explored in this chapter.
 
-This chapter discussion begins with an exploration of the tools used through the lens of authenticity and ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
+- Addressing contradictions arising in use of coding tool use and game asset creation - often experienced as more individual level
+- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation
+- Responding to tensions and barriers in cultural aspects of the game making activity
+
+
+Within the last area, I examine the impact of a process drama with an aim to establish and nurture community practice, exploring the value of introducing almost-real processes, near authentic tools and the possibility of learners developing learning identities within a drama frame. The drama process is an example of an introduced cultural tool. The process acts as wrapper to several supporting techniques. the side missions to and to sanction different approaches, the imagined audience encourages reflection and semi-authentic approaches. It is the most advanced tools of a range that was put into place to create a space suitable for creativity, collaboration and self expression.
+
+This chapter ends with a synthesis to initial barriers to engaging in game making practices and initial interventions to address them.
 
 <!-- - Introduces the use of design patterns and collections of patterns, as the germ cell of activity which then expands in different directions. -->
 
@@ -420,6 +437,8 @@ NOTE - Explore how performed in line with other research - e.g. DBR (Barab) and 
 <!-- For example a common contradiction may be an immediate goal of children to mess around, play games and have fun while the goals of parent may be to maximise the acquisition of skills -->
 
 
+
+
 ## Conflicts and design tensions experienced by participants and facilitator/s
 
 
@@ -552,7 +571,10 @@ For example, the use of CT concepts in a framework, listed as part of the initia
 
 
 
-### Tensions due to lack of access and familiarity to game programming tools
+
+## Tensions due to lack of access and familiarity to game programming tools
+
+**Addressing contradictions arising in use of coding tool use and game asset creation - often experienced as more individual level**
 
 MOVE THIS WHOLE SECTION BEFORE DESIGN ADAPTATION / CODE PLAYGROUND
 
@@ -591,13 +613,13 @@ By P2, learners first experience of the experience of the tools was in the proce
 
 
 
-#### Design choices of the starter game template
+### Design choices of the starter game template
 
 FOCUS ON THE TENSION FIRST AND SHIFT FROM P1 -> P2
 
 The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of online tutorials [^5] to support create a two-dimensional platformer game [^6]. The following section describes designs decisions relevant to the evolution of this starting template by drawing on concepts explored in the literature review, namely: UMC approaches; constructionist design heuristics; and the domain of human-computer interaction (HCI) research. In particular, I explore the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
 
-##### Structural design of the game template
+#### Structural design of the game template
 
 A web code project using the chosen game framework
 phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023]. Phaser starting templates available from the website share this aim of providing scaffolding by providing a downloadable zip of files which when extracted are already interlinked correctly [^5].
@@ -649,7 +671,7 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 
 
-##### Variable editing for player movement
+#### Variable editing for player movement
 
 To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
@@ -667,7 +689,7 @@ background colour of the game
 game layout of the platforms - hazards and food to collect. -->
 
 
-##### Level design and prototyping
+#### Level design and prototyping
 
 ILLUSTRATE BLOCK HERE WHICH BECOMES A TENSION - IN P1 OF PARTICIPANTS WANTING TO DO THINGS THEY COULDN'T -
 
@@ -697,7 +719,7 @@ I adopted a different solutions which abstracted away complexity to prioritise e
 <!-- The possibility of disturbing the syntax of the  of code in the array. When participant did this it provided a good opportunity for facilitators or parents to outline the importance of correct syntax of and to explain the code structure. -->
 
 
-##### Background colour and a pixel art
+#### Background colour and a pixel art
 
 START WITH SHIFT FROM P1 DIVERSITY TO P2 FOCUSED & OVERCOMING PRACTICAL BARRIERS.
 
@@ -735,7 +757,7 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
-#### Observations on the game template and core tools
+### Observations on the game template and core tools
 
 <!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
 
@@ -845,7 +867,7 @@ While block coding offers significant advantages (GL)in preventing syntax errors
 <!-- In my design, tools are more authentic and familiar in terms of using a professional framework and a web technology around which the internet browser is based on. -->
 <!-- #### Creation and migration of graphical and audio assets. -->
 
-#### Distributed vs. self-contained approaches to asset creation
+### Distributed vs. self-contained approaches to asset creation
 
 SHIFT FROM P1-> P2 IMPORTANT, TENSION OF A NEAT APPROACH WITH LESS FRICTION > AUTHENTIC SKILLS
 
@@ -908,7 +930,7 @@ Fig 4.x, Changes made to the code on the left section take immediate effect in t
 The a game template served to remove technical barriers to getting immediate feedback and offered other affordances explored in the next section. -->
 
 
-#### Remixing and showcasing projects
+### Remixing and showcasing projects
 
 REDUCE THE IMPORTANCE OF THIS PARAGRAPH - NO REALLY STRONG DATA SO SUMMARISE TENSIONS
 
@@ -927,7 +949,10 @@ This theme of shielding from complexity is contained in all design choices detai
 <!-- For example, the design choice in Scratch and Code.org sprite and game labs to create a default canvas screen size of the project. It is already present and visible on the creation of each new project and the user has no choice over the settings.  -->
 
 
-### Participant conflict associated with project navigation and use of documentation
+## Participant conflict associated with project navigation and use of documentation
+
+**- Contradictions associated with project navigation and the use of supporting documentation - interpreted here through the lens of guided participation**
+
 
 PERHAPS INCLUDE TIMELINE OF DOCUMENTATION IN HERE
 
@@ -953,7 +978,7 @@ The process of creating documentation which created enough support for users to 
 <!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
 by Mozilla and the Phaser developers. -->
 
-#### Quick Start Cards
+### Quick Start Cards
 
 To address the limit of one-to-one facilitator support to seed the starting processes outlined in the section above, I used printable resources which highlighted the key lines of code and how they can be altered to impact on game behaviour(see figure 4.x below). These _quick start_ cards provoked a strongly scaffolded initial interaction with the code in a way strongly aligned with the use and modify stages of the UMC framework [@franklin_analysis_2020].
 
@@ -962,7 +987,7 @@ To address the limit of one-to-one facilitator support to seed the starting proc
 
 The quick start cares were created at the end of P1 by trainee computing teachers in my faculty who volunteered to support a holiday outreach event for young people. I developed them by theming them into starting level, next level and boss level. Participants were encouraged to pick a card based on their interest and difficulty level.  
 
-#### Code snippet examples
+### Code snippet examples
 
 The use of code snippets, while a promising authentic practice, presented initial challenges. To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements. The use of code examples or snippets in code playgrounds is a common professional problem solving practice [@yang_stack_2017]. These code examples allow users to see the behaviour in context with the code and output side by side. While code examples existed on the Phaser website and support forums, in line with other support sites like stack exchange, their utility has limitations including lack of relevant, consistency, being removed from the domain context, and not being structured in a self explanatory way [@treude_understanding_2017]. Thus, while I initially encouraged participants to search within these examples, and authentic documentation and help forums, the resulting confusion and difficulties experienced by participants, prompted me to create other more bespoke documentation.  
 
@@ -971,7 +996,7 @@ The use of code snippets, while a promising authentic practice, presented initia
 Creating a bespoke set of code snippets helped address the challenges described above. In P1 I responded by creating one off documents with the relevant code which were both printed, emailed and shared via google drive. In line with the practice of accessing help via code snippets, the code examples could be to be copied and pasted into the game. This process lacked coherent process for participants to navigation to the resource they need. The process also lacked a consistency in signposting how the code listed fit within the existing structure. To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality. My rationale was that each pattern added builds familiarity with the code structure, a theory supported by observations of Toby's proficiency in the vignette above.
 
 
-#### Structuring instructional tutorial chapters
+### Structuring instructional tutorial chapters
 
 <!-- BELOW Initially I structured the book chapter participants working their way through the online resources. HOW -->
 
@@ -996,7 +1021,7 @@ Interestingly, the online menus was not used by participants in any regular or c
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 
-#### Theming the a collection of game design patterns to aid navigation
+### Theming the a collection of game design patterns to aid navigation
 
 <!-- **Tensions and related to navigation of various documentations sources** -->
 
@@ -1067,7 +1092,13 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
+## Responding to tensions and barriers in cultural aspects of the game making activity
+
 ### Conflicts due to identity clashes and dysfunctional group work
+
+
+
+
 <!-- **Participants stuck / demotivated : scope of ambition to high,  clashes of identity not hard core coders, no on-going playtesting, collaboration groups too big (transition),** -->
 
 <!-- In an early crisis point, one of the children  was not able to implement a desired feature as the 3D experience was beyond the technical possibilities of the code framework. -->
@@ -1087,7 +1118,7 @@ This experience aligns with research in this area explored in the literature rev
 
 I  shared the crisis of this family in particular, as the process drove me to focus on and further develop inclusive cultural practices which are explored in chapter six. While this conflict is cultural in nature, it is compounded by frustrations stemming from unfamiliarity with tools and processes. In participant feedback, the  parent of this family described in the previous section indicated that it took too long before in the planning stage and called for more hands on play and use of the tools of production before being called on to make creative decisions. The parent likened this to an arts studio approach. The next section explores this related conflict in more detail.
 
-#### Barriers of identity, coding & dysfunctional group work
+#### Barriers of identity, coding & dysfunctional group work - FROM ANOTHER CHAPTER
 
 NOTE - REALLY COMPRESS - MOVED FROM CH 6 BACK HERE
 question if DATA BECOMES PRESENT - USE AS BASIS FOR DISCUSSION /
@@ -1168,11 +1199,11 @@ That week I had omitted them as I felt a sense of urgency coming from families t
 
 
 
-## Exploring the impact of a drama processes
+### Exploring the impact of a drama processes
 
 The introduction of a drama process was introduced in response to a the barriers to participation caused by not identifying with the culture of coding or gaming. This section describes the addition ot the intervention and explores its value as a pedagogical tool to seed game coding practices and to develop learner agency.
 
-### Vignette 4.1.a - Introducing a drama process
+#### Vignette 4.1.a - Introducing a drama process
 
 The participants have entered the room and chosen a laptop to work on. Some of the children play web-based games or reviewing the games that they have made previously. The session progresses with a warm-up game which includes many false starts, changes of rules, development of tactics, appeals to be serious, full throated laughter and many restarts and which ends in good hearted failure. The transcript below picks up at this point.
 
@@ -1203,7 +1234,7 @@ The participants have entered the room and chosen a laptop to work on. Some of t
 And yeah. That we can work by ourselves but also work as part of a team. So we’ve got to give them a report by the end of each session as well. That’s our mission.
 
 
-### Description of Vignette 4.1.a
+#### Description of Vignette 4.1.a
 <!-- q: How much to reference back to previous chapter? -->
 
 <!-- The drama game which is served to put participants at their ease, to make communication between peers easier after engaging in play, to decentre the learning environment by creating a circle with more equal participation. As explored in the literature review, the use of such games to help set up informal learning environments is COMPLETE  -->
@@ -1249,7 +1280,7 @@ Beyond the wider fictional frame of the making activity, learners were also some
 describe the different kinds of interactions. But that is more interpersonal interactions for the most part.
 Here we are looking at something cultural?? -->
 
-### Vignette 4.1.b - Session reflections and secret missions
+#### Vignette 4.1.b - Session reflections and secret missions
 
 This second extract comes from the following session in phase four. In three of the four session the last 10 minutes of each session involved giving a progress update to the aliens.
 
@@ -1344,13 +1375,13 @@ RESTATING RQS
 - How can learners build agency in an evolving community of game makers? -->
 
 
-### Description of Vignette 4.1.b
+#### Description of Vignette 4.1.b
 
 <!-- IS MORE DESCRIPTION NEEDED HERE. ? -->
 
 In this extract participants are invited to take turns showing their game, recapping their progress and outlining next steps to the alien observers. I play the role as a liaison facilitating the process for the fictional, remote audience. I also draw attention to the secret missions that had been distributed to participants (along with social missions - both explore later in this chapter).
 
-### Relevant observations on side missions and drama from the data
+#### Relevant observations on side missions and drama from the data
 
 The positive reaction of young people to the drama process was also picked up in interview data.
 
@@ -1382,7 +1413,7 @@ https://playthinklearn.net/blog/ten-steps-to-game-design/ -->
 There is more evidence of the impact of the drama process in the vignette above. In the end of session reflection, Richie occupies a peripheral position and continues to interact with his laptop. However, he reacts positively when Ed's questions to the Weean are read out. He later adds to the discussion when it turns to the sabotage based missions set in the drama process. It is probably that the ability to represent his irreverent approach helped his participation in the more formal, collaborative reflection and feedback activity in a way that had not happened in previous sessions.
 
 
-### Reflecting in role
+#### Reflecting in role
 
 **It doesn't look like we've got anywhere but we have!**
 
@@ -1414,10 +1445,10 @@ Using the terms of student agency explored in the literature review, here we can
 <!-- and attempting to shift patterns of working from printed sheets to working online This was partly to be able to capture how participants interacted with documentation more easily as I would be able to review it on their screen in captured data.  -->
 
 
-### Observations on written interactions with the alien in the drama
+#### Observations on written interactions with the alien in the drama
 
 
-#### Exploring documentation and accessing technical help within the drama frame
+##### Exploring documentation and accessing technical help within the drama frame
 
 In the first phase of the project, I had promoted the use of a mailing list to ask technical and code questions of the wider group. This surfaced a conflict where parents were reluctant to bother other participants with such issues.
 
@@ -1431,7 +1462,7 @@ Here the text dialogue with the aliens is used as a mediating artefact first by 
 
 Thus, in summary, the process of writing down a text request in-role potentially addresses the (previously-explored in Chapter 4) barriers asking for help by de-personalising the process. It also encourages the adoption of professional practice of asking a written question to overcome a coding problem and thus builds experience of using technical terms. While this aspect of the drama process was introduced by the facilitator, in alignment with the understanding of Sannino's concepts of transformative agency through double stimulation (TADS) participants transform the function of the alien conversation to their own purposes. This theme is developed in the next section.
 
-#### Playful dialogue with the aliens unrelated to game making
+##### Playful dialogue with the aliens unrelated to game making
 
 The process of asking the aliens for technical help within a code project sparked a playful process of informal chatting with the aliens. During in our end of session reflection above, I noted the following ad-hoc encounter that a child initiated on the interactive page while his father was taking a break from coding.
 
@@ -1463,7 +1494,7 @@ To express this using affordance theory, the affordance offered by the medium of
 - identity of playfulness  
   -->
 
-### Concluding remarks on process drama
+#### Concluding remarks on process drama
 
 This section has explored the use of the possibilities of a drama process to support both the leaner expression of agency and as a pedagogical process for facilitators to militate probable conflicts and obstacles for learners in the creative process. The mission-based interventions began as naturally occurring expression of learner agency which became incorporated into the drama process. The next section examines the affordances and impact of the coding environment and starting game template, which in a similar way, evolved in response to participant use of earlier iterations of the toolset. Conversely, examples of more unguided practices and use of tools which served to increase the scope of agency are explored in the final section of this chapter.
 
@@ -1557,7 +1588,6 @@ In the data analysed, young people -->
 
 
 
-## Results on key interventions of the design concerning agency
 
 ### Using Physical Maps of Missions as Game Design Patterns
 
