--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -1,6 +1,7 @@
 -   [Exploration of the Formative Learning Design
     Process](#exploration-of-the-formative-learning-design-process)
-    -   [Research Questions - Feb 2024](#research-questions---feb-2024)
+    -   [Research Questions - April
+        2024](#research-questions---april-2024)
     -   [A note on style](#a-note-on-style)
     -   [Chapter Introduction](#chapter-introduction)
     -   [Detailed description of dimensions of game making
@@ -22,58 +23,65 @@
                 structures](#smaller-objectives-and-actions---implementing-discrete-code-and-design-structures)
     -   [Conflicts and design tensions experienced by participants and
         facilitator/s](#conflicts-and-design-tensions-experienced-by-participants-and-facilitators)
-        -   [Tensions due to lack of access and familiarity to game
-            programming
-            tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
-            -   [Design choices of the starter game
-                template](#design-choices-of-the-starter-game-template)
-            -   [Observations on the game template and core
-                tools](#observations-on-the-game-template-and-core-tools)
+    -   [Tensions due to lack of access and familiarity to game
+        programming
+        tools](#tensions-due-to-lack-of-access-and-familiarity-to-game-programming-tools)
+        -   [Design choices of the starter game
+            template](#design-choices-of-the-starter-game-template)
+            -   [Structural design of the game
+                template](#structural-design-of-the-game-template)
+            -   [Variable editing for player
+                movement](#variable-editing-for-player-movement)
+            -   [Level design and
+                prototyping](#level-design-and-prototyping)
+            -   [Background colour and a pixel
+                art](#background-colour-and-a-pixel-art)
+        -   [Observations on the game template and core
+            tools](#observations-on-the-game-template-and-core-tools)
         -   [Design adaptations to facilitate novice use of a code
             playground](#design-adaptations-to-facilitate-novice-use-of-a-code-playground)
             -   [Addressing code syntax
                 errors](#addressing-code-syntax-errors)
-            -   [Distributed vs. self-contained approaches to asset
-                creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
-            -   [Remixing and showcasing
-                projects](#remixing-and-showcasing-projects)
-        -   [Participant conflict associated with project navigation and
-            use of
-            documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
-            -   [Quick Start Cards](#quick-start-cards)
-            -   [Code snippet examples](#code-snippet-examples)
-            -   [Structuring instructional tutorial
-                chapters](#structuring-instructional-tutorial-chapters)
-            -   [Theming the a collection of game design patterns to aid
-                navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+        -   [Distributed vs. self-contained approaches to asset
+            creation](#distributed-vs.-self-contained-approaches-to-asset-creation)
+        -   [Remixing and showcasing
+            projects](#remixing-and-showcasing-projects)
+    -   [Participant conflict associated with project navigation and use
+        of
+        documentation](#participant-conflict-associated-with-project-navigation-and-use-of-documentation)
+        -   [Quick Start Cards](#quick-start-cards)
+        -   [Code snippet examples](#code-snippet-examples)
+        -   [Structuring instructional tutorial
+            chapters](#structuring-instructional-tutorial-chapters)
+        -   [Theming the a collection of game design patterns to aid
+            navigation](#theming-the-a-collection-of-game-design-patterns-to-aid-navigation)
+    -   [Responding to tensions and barriers in cultural aspects of the
+        game making
+        activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
             -   [Barriers of identity, coding & dysfunctional group
-                work](#barriers-of-identity-coding-dysfunctional-group-work)
-    -   [Exploring the impact of a drama
-        processes](#exploring-the-impact-of-a-drama-processes)
-        -   [Vignette 4.1.a - Introducing a drama
-            process](#vignette-4.1.a---introducing-a-drama-process)
-        -   [Description of Vignette
-            4.1.a](#description-of-vignette-4.1.a)
-        -   [Vignette 4.1.b - Session reflections and secret
-            missions](#vignette-4.1.b---session-reflections-and-secret-missions)
-        -   [Description of Vignette
-            4.1.b](#description-of-vignette-4.1.b)
-        -   [Relevant observations on side missions and drama from the
-            data](#relevant-observations-on-side-missions-and-drama-from-the-data)
-        -   [Reflecting in role](#reflecting-in-role)
-        -   [Observations on written interactions with the alien in the
-            drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
-            -   [Exploring documentation and accessing technical help
-                within the drama
-                frame](#exploring-documentation-and-accessing-technical-help-within-the-drama-frame)
-            -   [Playful dialogue with the aliens unrelated to game
-                making](#playful-dialogue-with-the-aliens-unrelated-to-game-making)
-        -   [Concluding remarks on process
-            drama](#concluding-remarks-on-process-drama)
-    -   [Results on key interventions of the design concerning
-        agency](#results-on-key-interventions-of-the-design-concerning-agency)
+                work - FROM ANOTHER
+                CHAPTER](#barriers-of-identity-coding-dysfunctional-group-work---from-another-chapter)
+        -   [Exploring the impact of a drama
+            processes](#exploring-the-impact-of-a-drama-processes)
+            -   [Vignette 4.1.a - Introducing a drama
+                process](#vignette-4.1.a---introducing-a-drama-process)
+            -   [Description of Vignette
+                4.1.a](#description-of-vignette-4.1.a)
+            -   [Vignette 4.1.b - Session reflections and secret
+                missions](#vignette-4.1.b---session-reflections-and-secret-missions)
+            -   [Description of Vignette
+                4.1.b](#description-of-vignette-4.1.b)
+            -   [Relevant observations on side missions and drama from
+                the
+                data](#relevant-observations-on-side-missions-and-drama-from-the-data)
+            -   [Reflecting in role](#reflecting-in-role)
+            -   [Observations on written interactions with the alien in
+                the
+                drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
+            -   [Concluding remarks on process
+                drama](#concluding-remarks-on-process-drama)
         -   [Using Physical Maps of Missions as Game Design
             Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
         -   [A game encouraging maker / player
