--- a/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-3-4-Design.md_toc.md
@@ -60,19 +60,20 @@
         activity](#responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
         -   [Conflicts due to identity clashes and dysfunctional group
             work](#conflicts-due-to-identity-clashes-and-dysfunctional-group-work)
-            -   [Barriers of identity, coding & dysfunctional group
-                work - FROM ANOTHER
-                CHAPTER](#barriers-of-identity-coding-dysfunctional-group-work---from-another-chapter)
+        -   [Using Physical Maps of Missions as Game Design
+            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
         -   [Exploring the impact of a drama
             processes](#exploring-the-impact-of-a-drama-processes)
-            -   [Vignette 4.1.a - Introducing a drama
-                process](#vignette-4.1.a---introducing-a-drama-process)
-            -   [Description of Vignette
-                4.1.a](#description-of-vignette-4.1.a)
-            -   [Vignette 4.1.b - Session reflections and secret
-                missions](#vignette-4.1.b---session-reflections-and-secret-missions)
+            -   [Rationale of use of drama
+                processes](#rationale-of-use-of-drama-processes)
+            -   [A game encouraging maker / player
+                types](#a-game-encouraging-maker-player-types)
+            -   [Description drama process using extracts from
+                vignettes](#description-drama-process-using-extracts-from-vignettes)
             -   [Description of Vignette
                 4.1.b](#description-of-vignette-4.1.b)
+            -   [Use of side missions to encourage varied creative
+                practices](#use-of-side-missions-to-encourage-varied-creative-practices)
             -   [Relevant observations on side missions and drama from
                 the
                 data](#relevant-observations-on-side-missions-and-drama-from-the-data)
@@ -82,12 +83,6 @@
                 drama](#observations-on-written-interactions-with-the-alien-in-the-drama)
             -   [Concluding remarks on process
                 drama](#concluding-remarks-on-process-drama)
-        -   [Using Physical Maps of Missions as Game Design
-            Patterns](#using-physical-maps-of-missions-as-game-design-patterns)
-        -   [A game encouraging maker / player
-            types](#a-game-encouraging-maker-player-types)
-        -   [Use of side missions to encourage varied creative
-            practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
         -   [Summary of barriers and tensions explored in this
             chapter](#summary-of-barriers-and-tensions-explored-in-this-chapter)
